# libsentences

./: CMakeLists.txt  LICENSE.txt  README.md  eval_sbd.cpp  sbd_util.cpp  sentence_splitter.cpp
cmake/: FindGFlags.cmake  FindGLog.cmake  re2c.cmake
libsentences/: memory_pool.cpp  memory_pool.h  quotes_detector.cpp  quotes_detector.h  sbd_context.h  sbd_model.cpp  sbd_model.h  standard_tokenizer.h  standard_tokenizer.rr.cpp  text_sentences.cpp  text_sentences.h  unicode_char.h  utf8_iterator.cpp  utf8_iterator.h  utf8_slice.cpp  utf8_slice.h  whitespace_tokenizer.h  whitespace_tokenizer.rr.cpp
